chore: started work on docs

--- a/docs/_source/tutorials_and_integrations/integrations/add_text_descriptives_as_metadata.ipynb
+++ b/docs/_source/tutorials_and_integrations/integrations/add_text_descriptives_as_metadata.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Add `Text Descriptives` as Metadata\n",
+    "# `textdescriptives`: Add basic descriptive features as Metadata\n",
     "\n",
     "In this tutorial, we will add text descriptives as metadata easily using the `TextDescriptivesExtractor` integrated on Argilla.\n",
     "\n",
@@ -81,7 +81,7 @@
    "source": [
     "# %pip install --upgrade pip\n",
     "%pip install argilla -qqq\n",
-    "%pip install datasets",
+    "%pip install datasets\n",
     "%pip install textdescriptives"
    ]
   },
@@ -305,7 +305,6 @@
     "\n",
     "* *model*: the language of the model.\n",
     "* *metrics*: the metrics to be extracted.\n",
-    "* *fields*: the field names to extract metrics from.\n",
     "* *visible_for_annotators*: whether the metadata is visible for annotators.\n",
     "* *show_progress*: whether to show the progress bar.\n",
     "\n",
@@ -337,7 +336,6 @@
     "tde = TextDescriptivesExtractor(\n",
     "    model = \"en\",\n",
     "    metrics = None,\n",
-    "    fields = [\"question\"],\n",
     "    visible_for_annotators = False,\n",
     "    show_progress = True,\n",
     ")"
@@ -350,7 +348,7 @@
    "outputs": [],
    "source": [
     "# Update the records\n",
-    "updated_records = tde.update_records(records)"
+    "updated_records = tde.update_records(records, fields=[\"question\"])"
    ]
   },
   {
@@ -436,7 +434,6 @@
     "tde = TextDescriptivesExtractor(\n",
     "    model = \"en\",\n",
     "    metrics = [\"descriptive_stats\", \"readability\"],\n",
-    "    fields = [\"context\"],\n",
     "    visible_for_annotators = True,\n",
     "    show_progress = True,\n",
     ")"
@@ -449,7 +446,7 @@
    "outputs": [],
    "source": [
     "# Update the dataset\n",
-    "tde.update_dataset(remote_dataset)"
+    "tde.update_dataset(remote_dataset, fields=[\"context\"])"
    ]
   },
   {
