--- a/docs/_source/tutorials_and_integrations/integrations/process_documents_with_unstructured.ipynb
+++ b/docs/_source/tutorials_and_integrations/integrations/process_documents_with_unstructured.ipynb
@@ -6,7 +6,7 @@
    "id": "6bb44a8e",
    "metadata": {},
    "source": [
-    "# Large-scale document processing for LLMs with Unstructured.io\n",
+    "# `unstructured`: Large-scale document processing for LLMs\n",
     "\n",
     "In this notebook, we'll show you how you can use the amazing library [unstructured](https://github.com/Unstructured-IO/unstructured) together with [argilla](https://github.com/argilla-io/argilla), and HuggingFace [transformers](https://github.com/huggingface/transformers) to train a custom summarization model. In this case, we're going to build a summarization model targeted at summarizing the [Institute for the Study of War's](https://www.understandingwar.org/) daily reports on the war in Ukraine. You can see an example of one of the reports [here](https://www.understandingwar.org/backgrounder/russian-offensive-campaign-assessment-december-12), and a screenshot appears below.\n",
     "\n",
