✨ Add suggestion value and response value (#4473)
- [x] Add Suggestion value category `Suggestion Value`
- [x] Show just rating question name.
- [x] Sort by rating suggestion value.
- [x] Add Responses value category `Response Value`
- [ ] Hide responses values at pending queue. (TBD) @nataliaElv 
- [x] Sort by rating response value on `Response Value` category

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -50,8 +50,13 @@
     "draft": "Save as draft"
   },
   "sorting": {
-    "score": "suggestion score",
-    "general": "general",
+    "addOtherField": "+ Add another field",
+    "suggestion": {
+      "score": "Suggestion score",
+      "value": "Suggestion value"
+    },
+    "response": "Response value",
+    "record": "general",
     "metadata": "metadata"
   },
   "suggestion": {
