--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/making-most-of-markdown.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/making-most-of-markdown.ipynb
@@ -69,7 +69,7 @@
     "%pip install datasets\n",
     "%pip install spacy spacy-transformers\n",
     "%pip install Pillow\n",
-    "%pip install span_maker\n",
+    "%pip install span_marker\n",
     "%pip install soundfile librosa\n",
     "!python -m spacy download en_core_web_sm"
    ]
