docs: updated phrasing and separated in two methods for dataset and records

--- a/docs/_source/tutorials_and_integrations/integrations/add_sentence_transformers_embeddings_as_vectors.ipynb
+++ b/docs/_source/tutorials_and_integrations/integrations/add_sentence_transformers_embeddings_as_vectors.ipynb
@@ -223,7 +223,6 @@
     "Our dataset currently lacks vectors. To address this, we will add sentence transformers vectors using the `SentenceTransformersExtractor`, which has the following arguments:\n",
     "\n",
     "* *model*: the model to use for extracting the embeddings.\n",
-    "* *fields*: the field names to create embeddings for.\n",
     "* *show_progress*: whether to show the progress bar.\n",
     "\n",
     "For more information about the `SentenceTransformersExtractor`, please check the [practical guide](./practical_guides/create_update_dataset/vectors.md).\n",
@@ -251,13 +250,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To records\n",
+    "\n",
+    "We can now add the vectors to the records using the `update_records` method. This method takes the following arguments:\n",
+    "\n",
+    "* *records*: the records to update.\n",
+    "* *fields*: the field to update.\n",
+    "* *overwrite*: whether to overwrite the existing vectors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Update the records\n",
-    "updated_records = ste.update_records(ds_remote.records)"
+    "updated_records = ste.update_records(\n",
+    "    records=ds_remote.records,\n",
+    "    fields=None, # Use all fields\n",
+    "    overwrite=True, # Overwrite existing fields\n",
+    ")"
    ]
   },
   {
@@ -280,21 +296,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that these updated records are note stored in the dataset yet and that we will need to add them to the dataset by updating the settings."
+    "Note that these updated records are not stored in the dataset yet. They can be added to a dataset with the correct settings through the `update_records` methods. If not present, will need to add the correct to the dataset."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### To a Dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we will update our dataset with the text descriptives for the context. In this case, we will initialize the `SentenceTransformersExtractor` indicating that we want to extract the metrics related to `descriptive_stats` and `coherence`. We will also set the `visible_for_annotators` argument to `True` so that the metadata is visible for annotators in the UI."
+    "### To a Dataset\n",
+    "\n",
+    "Now, we will update our dataset with the vectors and vector setting in one run. In this case, we will re-use the initialized `SentenceTransformersExtractor`. The `update_dataset` method takes the following arguments:\n",
+    "\n",
+    "* *dataset*: the dataset to update.\n",
+    "* *fields*: the fields to update.\n",
+    "* *update_records*: whether to update the records directly.\n",
+    "* *overwrite*: whether to overwrite the existing vectors."
    ]
   },
   {
@@ -304,7 +320,12 @@
    "outputs": [],
    "source": [
     "# Update the dataset\n",
-    "ste.update_dataset(ds_remote, update_records=True, fields=[\"context\"])"
+    "ste.update_dataset(\n",
+    "    dataset=ds_remote, \n",
+    "    fields=[\"context\"], # Only update the context field\n",
+    "    update_records=True, # Update the records in the dataset\n",
+    "    overwrite=False, # Overwrite existing fields\n",
+    ")"
    ]
   },
   {
