feat: 4018 feature add out of the box embedding support via clientfeedbackintegrations (#4454)
<!-- Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged. -->

# Description

I added support for `sentence-transformers` via the introduction of the
`SentenceTransformersExtractor`. During the implementation, I fixed some
minor issues.

- replaced the `vector_settings_by_name` that had been defined twice for
the `remote` dataset and once within the `local` dataset, by the method
we defined in the shared `base`.
- updated the `__repr__` of the dataset to include the
`vector_settings`.
- rewrote some code of the `TextDescriptivesExtractor` to align the
structure and usage of both extractors.
- resolved a bug in the `TextDescriptivesExtractor`, where we might
update records from wrong indices with embedding during simultaneous IO.
- removed unit tests for the `TextDescriptivesExtractor` and created
integration tests instead.
- removed some unused imoports
 
Closes #4018 

**Type of change**

(Please delete options that are not relevant. Remember to title the PR
according to the type of change)

- [X] New feature (non-breaking change which adds functionality)
- [X] Refactor (change restructuring the codebase without changing
functionality)
- [X] Improvement (change adding some improvement to an existing
functionality)

**How Has This Been Tested**

(Please describe the tests that you ran to verify your changes. And
ideally, reference `tests`)

- [X] integration/**/**/integration/test_textdescriptives.py
- [X] integration/**/**/integration/test_sentencetransformerx.py

**Checklist**

- [x] I added relevant documentation
- [x] I followed the style guideline

--- a/docs/_source/practical_guides/annotation_workflows/add_text_descriptives_as_metadata.ipynb
+++ b/docs/_source/practical_guides/annotation_workflows/add_text_descriptives_as_metadata.ipynb
@@ -304,7 +304,6 @@
     "\n",
     "* *model*: the language of the model.\n",
     "* *metrics*: the metrics to be extracted.\n",
-    "* *fields*: the field names to extract metrics from.\n",
     "* *visible_for_annotators*: whether the metadata is visible for annotators.\n",
     "* *show_progress*: whether to show the progress bar.\n",
     "\n",
@@ -336,7 +335,6 @@
     "tde = TextDescriptivesExtractor(\n",
     "    model = \"en\",\n",
     "    metrics = None,\n",
-    "    fields = [\"question\"],\n",
     "    visible_for_annotators = False,\n",
     "    show_progress = True,\n",
     ")"
@@ -349,7 +347,7 @@
    "outputs": [],
    "source": [
     "# Update the records\n",
-    "updated_records = tde.update_records(records)"
+    "updated_records = tde.update_records(records, fields=[\"question\"])"
    ]
   },
   {
@@ -435,7 +433,6 @@
     "tde = TextDescriptivesExtractor(\n",
     "    model = \"en\",\n",
     "    metrics = [\"descriptive_stats\", \"readability\"],\n",
-    "    fields = [\"context\"],\n",
     "    visible_for_annotators = True,\n",
     "    show_progress = True,\n",
     ")"
@@ -448,7 +445,7 @@
    "outputs": [],
    "source": [
     "# Update the dataset\n",
-    "tde.update_dataset(remote_dataset)"
+    "tde.update_dataset(remote_dataset, fields=[\"context\"])"
    ]
   },
   {
