update UI tooltips

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -5,9 +5,12 @@
   "text": "Text",
   "rating": "Rating",
   "minimize": "Minimize",
+  "select": "Select",
+  "search": "Search",
   "expand": "Expand",
   "copied": "Copied",
   "title": "Title",
+  "annotation": "Annotation",
   "description": "Description",
   "useMarkdown": "Use Markdown",
   "visibleForAnnotators": "Visible for annotators",
@@ -50,7 +53,8 @@
     "fixedHeight": "Collapse records",
     "defaultHeight": "Expand records",
     "to_annotate_record_bulk_required": "No record selected",
-    "select_to_annotate": "Select to annotate"
+    "select_to_annotate": "Select all",
+    "pageSize": "Page size"
   },
   "shortcuts": {
     "label": "Shortcuts",
@@ -79,12 +83,16 @@
     "suggested-rank": "✨ Suggested rank",
     "name": "✨ Suggestion"
   },
+  "similarity": {
+    "records": "Records",
+    "findSimilar": "Find similar",
+    "similarTo": "Similar to",
+    "similarityScore": "Similarity Score",
+    "similarUsing": "similar using",
+    "expand": "Expand"
+  },
   "filters": "Filters",
   "filterBy": "Filter by...",
-  "findSimilar": "Find similar",
-  "similarTo": "Similar to",
-  "similarityScore": "Similarity Score",
-  "similarUsing": "similar using",
   "fields": "Fields",
   "questions": "Questions",
   "metadata": "Metadata",
@@ -96,8 +104,8 @@
   "with": "with",
   "find": "Find",
   "cancel": "Cancel",
-  "focus_mode": "Focus mode",
-  "bulk_mode": "Bulk mode",
+  "focus_mode": "Focus view",
+  "bulk_mode": "Bulk view",
   "update": "Update",
   "youAreOnlineAgain": "You are online again",
   "youAreOffline": "You are offline",
