add note regarding target_modules

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/monitoring-bias-ethics-dpo.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/monitoring-bias-ethics-dpo.ipynb
@@ -2761,7 +2761,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we want to initialize the **LoRA configuration**. This will allow us to freeze the pre-trained model weights while dynamically adjusting only a small set of additional parameters. This approach reduces the computational burden and memory requirements, making it a more practical and resource-efficient way to customize pre-trained models. In this case, we will target the layers within the attention mechanism and the feed-forward networks."
+    "Finally, we want to initialize the **LoRA configuration**. This will allow us to freeze the pre-trained model weights while dynamically adjusting only a small set of additional parameters. This approach reduces the computational burden and memory requirements, making it a more practical and resource-efficient way to customize pre-trained models. In this case, we will target the layers within the attention mechanism and the feed-forward networks, although you can choose to target other modules as identifying the best ones is still in progress."
    ]
   },
   {
