update translation and fix tooltip

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -89,7 +89,7 @@
     "name": "✨ Suggestion"
   },
   "similarity": {
-    "records": "Records",
+    "record-number": "Record number",
     "findSimilar": "Find similar",
     "similarTo": "Similar to",
     "similarityScore": "Similarity Score",
