chore: renamed and added mps logic

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/monitoring-bias-ethics-dpo.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/monitoring-bias-ethics-dpo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 👀 Monitoring Ethics and Bias in LLMs: Giskard and DPO"
+    "# 👀 Detect and improve ethics and bias in LLMs: Giskard and DPO"
    ]
   },
   {
@@ -2576,16 +2576,23 @@
    "source": [
     "After the annotators have submitted their feedback, we will use it to fine-tune `microsoft/phi-2` for DPO. This model, known as Phi-2, is a scaled-down machine learning model with 2.7 billion parameters. Despite its smaller size, it excels in performance relative to larger models. Phi-2 has not been fine-tuned using reinforcement learning from human feedback, so we will use DPO to reduce toxicity and societal biases.\n",
     "\n",
-    "Run the code below to check if the GPU is available as it is highly recommended.\n",
-    "\n",
-    "```python\n",
+    "Run the code below to check if the GPU is available as it is highly recommended."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if torch.cuda.is_available():\n",
     "    device = torch.device(\"cuda\")\n",
     "    print(f\"Using {torch.cuda.get_device_name(0)}\")\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    device = torch.device(\"mps\")\n",
     "else:\n",
     "    device = torch.device(\"cpu\")\n",
-    "    print(\"No GPU available, using CPU instead.\")\n",
-    "```"
+    "    print(\"No GPU available, using CPU instead.\")"
    ]
   },
   {
