add attributes and remove duplicated code

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/making-most-of-markdown.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/making-most-of-markdown.ipynb
@@ -568,7 +568,7 @@
    "source": [
     "## Exploring Multi-Modality: Video, Audio and Image\n",
     "\n",
-    "As we already mentioned, Argilla supports handling video, audio, and images within markdown fields, provided they are formatted in HTML. To facilitate this, we offer three functions: `video_to_html`, `audio_to_html`, and `image_to_html`. These functions accept either the file path or the file's byte data and return the corresponding HTMurl to render the media file within the Argilla user interface\n"
+    "As we already mentioned, Argilla supports handling video, audio, and images within markdown fields, provided they are formatted in HTML. To facilitate this, we offer three functions: `video_to_html`, `audio_to_html`, and `image_to_html`. These functions accept either the file path or the file's byte data and return the corresponding HTMurl to render the media file within the Argilla user interface. Additionally, you can also set the `width` and `height` in pixel or percentage for video and image (defaults to the original dimensions) and the `autoplay` and `loop` attributes to `True` for audio and video (defaults to False).\n"
    ]
   },
   {
@@ -622,9 +622,9 @@
    "source": [
     "# Add the records\n",
     "records = [\n",
-    "    rg.FeedbackRecord(fields={\"content\": video_to_html(\"/content/snapshot.mp4\")}),\n",
-    "    rg.FeedbackRecord(fields={\"content\": audio_to_html(\"/content/sea.wav\")}),\n",
-    "    rg.FeedbackRecord(fields={\"content\": image_to_html(\"/content/peacock.jpg\")}),\n",
+    "    rg.FeedbackRecord(fields={\"content\": video_to_html(\"/content/snapshot.mp4\", autoplay=True)}),\n",
+    "    rg.FeedbackRecord(fields={\"content\": audio_to_html(\"/content/sea.wav\", autoplay=True, loop=True)}),\n",
+    "    rg.FeedbackRecord(fields={\"content\": image_to_html(\"/content/peacock.jpg\", width=\"50%\", height=\"50%\")}),\n",
     "]\n",
     "ds_multi_modal.add_records(records)"
    ]
@@ -1083,7 +1083,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Argilla also supports PDFs. You can add a PDF to a TextField by using the `pdf_to_html` function similarly to what we have done before. This function accepts either the **file path**, the **URLs** or the **file's byte data** and returns the corresponding HTML to render the PDF within the Argilla user interface. Below, you can see an example of how to use this function."
+    "Argilla also supports PDFs. You can add a PDF to a TextField by using the `pdf_to_html` function similarly to what we have done before. This function accepts either the **file path**, the **URLs** or the **file's byte data** and returns the corresponding HTML to render the PDF within the Argilla user interface. Optionally, you can also set the `width` and `height` in pixel or percentage (defaults to 700px). Below, you can see an example of how to use this function."
    ]
   },
   {
@@ -1110,7 +1110,7 @@
     "\n",
     "# Add the records using pdf_to_html\n",
     "records = [\n",
-    "    rg.FeedbackRecord(fields={\"content\": pdf_to_html(input_file=file_url)})]\n",
+    "    rg.FeedbackRecord(fields={\"content\": pdf_to_html(file_source=file_url, width=\"700px\", height=\"700px\")})]\n",
     "ds_pdf.add_records(records)"
    ]
   },
